# vaemcmc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/exps/cifar/: vae_sngan.yml
configs/exps/synth/: banana_vae_rnvp.yml  funnel_vae_rnvp.yml  mog_vae_rnvp.yml  ring_vae_rnvp.yml
configs/models/: mmc_dcgan.yml  mmc_sngan.yml
exps/: __init__.py  gan.py  synth_vae_flow.py
notebooks/: banana.ipynb  banana_embed.ipynb  bin_mnist.ipynb  funnel.ipynb  funnel_embed.ipynb  mog_large_d.ipynb  ring_embed.ipynb  sngan.ipynb
scripts/: convert_mmc_ckpt.py  create_stats_file.py
vaemcmc/: __init__.py  aux.py  base_model.py  callback.py  config.py  ebm.py  flow.py  gan.py  mcmc.py  registry.py  vae.py
vaemcmc/datasets/: sampler.py  synthetic.py
vaemcmc/distributions/: __init__.py  base.py  ebm.py  synthetic.py  transforms.py
vaemcmc/metrics/: fid.py  mmc_eval.py
vaemcmc/models/: __init__.py  decoders.py  encoders.py  mmc.py  rnvp.py  vaebm.py
vaemcmc/models/aux/: neural_operations.py
vaemcmc/training/: train_logger.py  trainer.py
vaemcmc/utils/: general.py
vaemcmc/viz/: synthetic.py
